// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform almost-eligible record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMeMinimumOrCommunityCustody": Object {
      "custodyLevel": "MINIMUM",
    },
  },
  "externalId": "002",
  "ineligibleCriteria": Object {
    "usMeNoClassAOrBViolationFor90Days": Object {
      "eligibleDate": 2022-11-15T00:00:00.000Z,
    },
    "usMeServedXPortionOfSentence": Object {
      "eligibleDate": 2023-01-03T00:00:00.000Z,
    },
    "usMeXMonthsRemainingOnSentence": Object {
      "eligibleDate": 2022-12-07T00:00:00.000Z,
    },
  },
  "stateCode": "US_ME",
}
`;

exports[`transform record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMeMinimumOrCommunityCustody": Object {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": Object {
      "eligibleDate": 2022-11-03T00:00:00.000Z,
    },
    "usMeXMonthsRemainingOnSentence": Object {
      "eligibleDate": 2022-08-07T00:00:00.000Z,
    },
  },
  "externalId": "001",
  "ineligibleCriteria": Object {},
  "stateCode": "US_ME",
}
`;
